--- a/mscore/mixer.ui
+++ b/mscore/mixer.ui
@@ -1,7 +1,8 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>PartEditBase</class>
- <widget class="QWidget" name="PartEditBase" >
-  <property name="geometry" >
+ <widget class="QWidget" name="PartEditBase">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
@@ -9,370 +10,389 @@
     <height>106</height>
    </rect>
   </property>
-  <property name="sizePolicy" >
-   <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+  <property name="sizePolicy">
+   <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
     <horstretch>0</horstretch>
     <verstretch>0</verstretch>
    </sizepolicy>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" >
-   <property name="spacing" >
+  <layout class="QVBoxLayout">
+   <property name="spacing">
     <number>3</number>
    </property>
-   <property name="margin" >
+   <property name="margin">
     <number>1</number>
    </property>
    <item>
-    <widget class="QGroupBox" name="groupBox" >
-     <property name="sizePolicy" >
-      <sizepolicy vsizetype="Fixed" hsizetype="Preferred" >
+    <widget class="QGroupBox" name="groupBox">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
        <horstretch>0</horstretch>
        <verstretch>0</verstretch>
       </sizepolicy>
      </property>
-     <property name="title" >
+     <property name="title">
       <string/>
      </property>
-     <property name="flat" >
+     <property name="flat">
       <bool>true</bool>
      </property>
-     <layout class="QGridLayout" >
-      <property name="margin" >
+     <layout class="QGridLayout">
+      <property name="margin">
        <number>1</number>
       </property>
-      <property name="spacing" >
+      <property name="spacing">
        <number>0</number>
       </property>
-      <item row="0" column="0" >
-       <widget class="QLineEdit" name="partName" >
-        <property name="toolTip" >
+      <item row="0" column="0">
+       <widget class="QLineEdit" name="partName">
+        <property name="toolTip">
          <string>Part Name</string>
         </property>
-        <property name="readOnly" >
+        <property name="readOnly">
          <bool>true</bool>
         </property>
        </widget>
       </item>
-      <item rowspan="3" row="0" column="1" >
-       <layout class="QGridLayout" >
-        <property name="sizeConstraint" >
+      <item row="0" column="1" rowspan="3">
+       <layout class="QGridLayout">
+        <property name="sizeConstraint">
          <enum>QLayout::SetFixedSize</enum>
         </property>
-        <property name="spacing" >
+        <property name="spacing">
          <number>0</number>
         </property>
-        <item row="0" column="0" >
-         <widget class="Awl::Knob" name="volume" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Ignored" hsizetype="Fixed" >
+        <item row="0" column="0">
+         <widget class="Awl::Knob" name="volume" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Ignored">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="minimumSize" >
+          <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
           </property>
-          <property name="maximumSize" >
+          <property name="maximumSize">
            <size>
             <width>50</width>
             <height>16777215</height>
            </size>
           </property>
-          <property name="toolTip" >
+          <property name="toolTip">
            <string>Volume</string>
           </property>
-          <property name="invertedAppearance" >
+          <property name="invertedAppearance" stdset="0">
            <bool>false</bool>
           </property>
-          <property name="scaleWidth" >
+          <property name="scaleWidth" stdset="0">
            <number>5</number>
           </property>
-          <property name="scaleValueColor" >
+          <property name="scaleValueColor" stdset="0">
            <color>
             <red>255</red>
             <green>3</green>
             <blue>7</blue>
            </color>
           </property>
-          <property name="maxValue" >
+          <property name="maxValue" stdset="0">
            <double>127.000000000000000</double>
           </property>
-          <property name="lineStep" >
+          <property name="lineStep" stdset="0">
            <double>1.000000000000000</double>
           </property>
-          <property name="pageStep" >
+          <property name="pageStep" stdset="0">
            <double>10.000000000000000</double>
           </property>
          </widget>
         </item>
-        <item row="0" column="1" >
-         <widget class="Awl::MidiPanKnob" name="pan" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Ignored" hsizetype="Fixed" >
+        <item row="0" column="1">
+         <widget class="Awl::MidiPanKnob" name="pan" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Ignored">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="minimumSize" >
+          <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
           </property>
-          <property name="maximumSize" >
+          <property name="maximumSize">
            <size>
             <width>50</width>
             <height>16777215</height>
            </size>
           </property>
-          <property name="toolTip" >
+          <property name="toolTip">
            <string>Panorama Position</string>
           </property>
-          <property name="scaleWidth" >
+          <property name="scaleWidth" stdset="0">
            <number>5</number>
           </property>
          </widget>
         </item>
-        <item row="0" column="2" >
-         <widget class="Awl::Knob" name="reverb" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Ignored" hsizetype="Fixed" >
+        <item row="0" column="2">
+         <widget class="Awl::Knob" name="reverb" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Ignored">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="minimumSize" >
+          <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
           </property>
-          <property name="maximumSize" >
+          <property name="maximumSize">
            <size>
             <width>50</width>
             <height>16777215</height>
            </size>
           </property>
-          <property name="toolTip" >
+          <property name="toolTip">
            <string>Reverb</string>
           </property>
-          <property name="scaleWidth" >
+          <property name="scaleWidth" stdset="0">
            <number>5</number>
           </property>
-          <property name="maxValue" >
+          <property name="maxValue" stdset="0">
            <double>127.000000000000000</double>
           </property>
-          <property name="lineStep" >
+          <property name="lineStep" stdset="0">
            <double>1.000000000000000</double>
           </property>
-          <property name="pageStep" >
+          <property name="pageStep" stdset="0">
            <double>10.000000000000000</double>
           </property>
          </widget>
         </item>
-        <item row="0" column="3" >
-         <widget class="Awl::Knob" name="chorus" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Ignored" hsizetype="Fixed" >
+        <item row="0" column="3">
+         <widget class="Awl::Knob" name="chorus" native="true">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Ignored">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="minimumSize" >
+          <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
           </property>
-          <property name="maximumSize" >
+          <property name="maximumSize">
            <size>
             <width>50</width>
             <height>16777215</height>
            </size>
           </property>
-          <property name="toolTip" >
+          <property name="toolTip">
            <string>Chorus</string>
           </property>
-          <property name="scaleWidth" >
+          <property name="scaleWidth" stdset="0">
            <number>5</number>
           </property>
-          <property name="maxValue" >
+          <property name="maxValue" stdset="0">
            <double>127.000000000000000</double>
           </property>
-          <property name="lineStep" >
+          <property name="lineStep" stdset="0">
            <double>1.000000000000000</double>
           </property>
-          <property name="pageStep" >
+          <property name="pageStep" stdset="0">
            <double>10.000000000000000</double>
           </property>
          </widget>
         </item>
-        <item row="1" column="0" >
-         <widget class="QLabel" name="label" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
+        <item row="1" column="0">
+         <widget class="QLabel" name="label">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="minimumSize" >
+          <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
           </property>
-          <property name="maximumSize" >
+          <property name="maximumSize">
            <size>
             <width>50</width>
             <height>16777215</height>
            </size>
           </property>
-          <property name="text" >
+          <property name="text">
            <string>Vol</string>
           </property>
-          <property name="alignment" >
+          <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
-        <item row="1" column="1" >
-         <widget class="QLabel" name="label_3" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
+        <item row="1" column="1">
+         <widget class="QLabel" name="label_3">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="minimumSize" >
+          <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
           </property>
-          <property name="maximumSize" >
+          <property name="maximumSize">
            <size>
             <width>50</width>
             <height>16777215</height>
            </size>
           </property>
-          <property name="text" >
+          <property name="text">
            <string>Pan</string>
           </property>
-          <property name="alignment" >
+          <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
-        <item row="1" column="2" >
-         <widget class="QLabel" name="label_4" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
+        <item row="1" column="2">
+         <widget class="QLabel" name="label_4">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="minimumSize" >
+          <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
           </property>
-          <property name="maximumSize" >
+          <property name="maximumSize">
            <size>
             <width>50</width>
             <height>16777215</height>
            </size>
           </property>
-          <property name="text" >
+          <property name="text">
            <string>Rev</string>
           </property>
-          <property name="alignment" >
+          <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
-        <item row="1" column="3" >
-         <widget class="QLabel" name="label_5" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Fixed" hsizetype="Expanding" >
+        <item row="1" column="3">
+         <widget class="QLabel" name="label_5">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="minimumSize" >
+          <property name="minimumSize">
            <size>
             <width>50</width>
             <height>0</height>
            </size>
           </property>
-          <property name="maximumSize" >
+          <property name="maximumSize">
            <size>
             <width>50</width>
             <height>16777215</height>
            </size>
           </property>
-          <property name="text" >
+          <property name="text">
            <string>Cho</string>
           </property>
-          <property name="alignment" >
+          <property name="alignment">
            <set>Qt::AlignCenter</set>
           </property>
          </widget>
         </item>
        </layout>
       </item>
-      <item row="1" column="0" >
-       <layout class="QHBoxLayout" >
+      <item row="1" column="0">
+       <layout class="QHBoxLayout">
+        <property name="spacing">
+         <number>20</number>
+        </property>
         <item>
-         <widget class="QCheckBox" name="mute" >
-          <property name="text" >
+         <widget class="QCheckBox" name="mute">
+          <property name="text">
            <string>Mute</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="solo" >
-          <property name="text" >
+         <widget class="QCheckBox" name="solo">
+          <property name="text">
            <string>Solo</string>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QCheckBox" name="drumset" >
-          <property name="text" >
-           <string>drumset</string>
+         <widget class="QLabel" name="drumset">
+          <property name="text">
+           <string>Drumset</string>
+          </property>
+          <property name="alignment">
+           <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
           </property>
          </widget>
         </item>
+        <item>
+         <spacer name="horizontalSpacer">
+          <property name="orientation">
+           <enum>Qt::Horizontal</enum>
+          </property>
+          <property name="sizeHint" stdset="0">
+           <size>
+            <width>40</width>
+            <height>20</height>
+           </size>
+          </property>
+         </spacer>
+        </item>
        </layout>
       </item>
-      <item row="2" column="0" >
-       <layout class="QHBoxLayout" >
+      <item row="2" column="0">
+       <layout class="QHBoxLayout">
         <item>
-         <widget class="QLabel" name="label_2" >
-          <property name="sizePolicy" >
-           <sizepolicy vsizetype="Fixed" hsizetype="Fixed" >
+         <widget class="QLabel" name="label_2">
+          <property name="sizePolicy">
+           <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
             <horstretch>0</horstretch>
             <verstretch>0</verstretch>
            </sizepolicy>
           </property>
-          <property name="text" >
+          <property name="text">
            <string>Sound:</string>
           </property>
-          <property name="textFormat" >
+          <property name="textFormat">
            <enum>Qt::PlainText</enum>
           </property>
          </widget>
         </item>
         <item>
-         <widget class="QComboBox" name="patch" >
-          <property name="toolTip" >
+         <widget class="QComboBox" name="patch">
+          <property name="toolTip">
            <string>MIDI Sound</string>
           </property>
          </widget>
@@ -386,14 +406,14 @@
  </widget>
  <customwidgets>
   <customwidget>
-   <class>Awl::MidiPanKnob</class>
-   <extends>Awl::Knob</extends>
-   <header>awl/midipanknob.h</header>
-  </customwidget>
-  <customwidget>
    <class>Awl::Knob</class>
    <extends>QWidget</extends>
    <header>awl/knob.h</header>
+  </customwidget>
+  <customwidget>
+   <class>Awl::MidiPanKnob</class>
+   <extends>Awl::Knob</extends>
+   <header>awl/midipanknob.h</header>
   </customwidget>
  </customwidgets>
  <resources/>
