--- a/mscore/inspector_lasso.ui
+++ b/mscore/inspector_lasso.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>287</width>
+    <width>335</width>
     <height>93</height>
    </rect>
   </property>
@@ -63,6 +63,9 @@
      </item>
      <item row="0" column="2">
       <widget class="QDoubleSpinBox" name="posY">
+       <property name="suffix">
+        <string>mm</string>
+       </property>
        <property name="decimals">
         <number>1</number>
        </property>
@@ -79,6 +82,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="suffix">
+        <string>mm</string>
+       </property>
        <property name="decimals">
         <number>1</number>
        </property>
@@ -94,6 +100,9 @@
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="suffix">
+        <string>mm</string>
        </property>
        <property name="decimals">
         <number>1</number>
@@ -115,6 +124,9 @@
      </item>
      <item row="0" column="1">
       <widget class="QDoubleSpinBox" name="posX">
+       <property name="suffix">
+        <string>mm</string>
+       </property>
        <property name="decimals">
         <number>1</number>
        </property>
