--- a/mscore/instrwizard.ui
+++ b/mscore/instrwizard.ui
@@ -21,6 +21,9 @@
        <property name="alternatingRowColors">
         <bool>true</bool>
        </property>
+       <property name="selectionMode">
+        <enum>QAbstractItemView::MultiSelection</enum>
+       </property>
        <property name="uniformRowHeights">
         <bool>true</bool>
        </property>
