fix #21235 add bracket symbol to notehead master palette
Former-commit-id: 89c6e52fa5276a85341fe088fa4c1ce21eb8da09

--- a/mscore/musescore.qrc
+++ b/mscore/musescore.qrc
@@ -129,5 +129,6 @@
         <file>data/icons-dark/media-playback-pan.svg</file>
         <file>data/icons-dark/media-playback-repeats.svg</file>
         <file>data/icons-dark/sound-while-editing.svg</file>
+        <file>data/icons-dark/brackets.svg</file>
     </qresource>
 </RCC>
