--- a/mscore/prefsdialog.ui
+++ b/mscore/prefsdialog.ui
@@ -2559,31 +2559,42 @@
          </property>
          <layout class="QVBoxLayout" name="verticalLayout_14">
           <item>
-           <widget class="QCheckBox" name="exportLayout">
-            <property name="text">
+           <widget class="QGroupBox" name="exportLayout">
+            <property name="title">
              <string>Export layout</string>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="exportAllBreaks">
-            <property name="text">
-             <string>Export all system and page breaks</string>
+            <property name="checkable">
+             <bool>true</bool>
             </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="exportManualBreaks">
-            <property name="text">
-             <string>Export manually added system and page breaks only</string>
-            </property>
-           </widget>
-          </item>
-          <item>
-           <widget class="QRadioButton" name="exportNoBreaks">
-            <property name="text">
-             <string>Do not export system or page breaks</string>
-            </property>
+            <layout class="QVBoxLayout" name="verticalLayout_11">
+             <item>
+              <widget class="QRadioButton" name="exportAllBreaks">
+               <property name="text">
+                <string>Export all system and page breaks</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="exportManualBreaks">
+               <property name="text">
+                <string>Export manually added system and page breaks only</string>
+               </property>
+              </widget>
+             </item>
+             <item>
+              <widget class="QRadioButton" name="exportNoBreaks">
+               <property name="text">
+                <string>Do not export system or page breaks</string>
+               </property>
+              </widget>
+             </item>
+            </layout>
+            <zorder>exportNoBreaks</zorder>
+            <zorder>exportAllBreaks</zorder>
+            <zorder>exportManualBreaks</zorder>
+            <zorder>exportNoBreaks</zorder>
+            <zorder>exportAllBreaks</zorder>
+            <zorder>exportManualBreaks</zorder>
            </widget>
           </item>
          </layout>
