add brackets.svg to mac resource file
Former-commit-id: bbe0e1423c1bf6bd36332652b7fe3130ce2b8d0e

--- a/mscore/musescore-apple.qrc
+++ b/mscore/musescore-apple.qrc
@@ -62,6 +62,7 @@
       <file>data/icons-dark/measure.svg</file>
       <file>data/icons-dark/checkmark.svg</file>
       <file>data/close.png</file>
+      <file>data/icons-dark/brackets.svg</file>
 
       <file>data/icons-dark/align-vertical-bottom.svg</file>
       <file>data/icons-dark/align-vertical-center.svg</file>
