fix color of QListView and QHeaderView text in Mac dark theme
Former-commit-id: 48a9d230ccd707a246e44e0e7a7c775af74dc299

--- a/share/styles/appstyle-mac-dark.css
+++ b/share/styles/appstyle-mac-dark.css
@@ -79,3 +79,11 @@ QGroupBox::title {
       subcontrol-position: top left;
       padding: 5px 5px;
       }
+
+QHeaderView {
+      color:white;
+}
+
+QListView {
+      color:white;
+}
